# skymp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  FiveM-Ideen-SkyMP-Roadmap.md  README-plugins.md  README.md  ROADMAP.md  ROADMAP_FIVEM_IDEAS.md  ROADMAP_FRONTEND.md  WEBSOCKET_E2E_TEST_TEMPLATE.js  WEBSOCKET_INTEGRATION_GUIDE.md  WEBSOCKET_PATCHES.md  WEBSOCKET_ROADMAP_UPDATE.md  WEBSOCKET_TESTING_REPORT.md  WEBSOCKET_WORKFLOW_ANALYSIS.md  build.sh  linter-config.json  output.txt  package-lock.json
.github/actions/pr_base/: action.yml
.github/workflows/: build-docker-images.yml  deploy.yml  deploy_gamemode.yml  formatting.yml  get-logs.yml  pr-emscripten.yml  pr-linux-variants.yml  pr-windows-flatrim.yml  pr-windows-skyrimvr.yml  prettier.yml  running_server_files.yml  sp-release.yml  trigger-installer.yml  trigger-sp-types-update.yml
cmake/: package_manager.cmake
cmake/scripts/: copy_frontend_if_exists.cmake  generate_client_settings.cmake  generate_server_settings.cmake  prepare_server_data.cmake
docs/: README.md  SUMMARY.md  docs_admin_console_commands.md  docs_admin_discord_oauth.md  docs_alchemy_system_plan.md  docs_clientside_scripting_reference.md  docs_cmake_workflow.md  docs_cpp_code_guidelines.md  docs_database_drivers.md  docs_deploy.md  docs_events_system.md  docs_external_fork_ideas.md  docs_maintainer_rules.md  docs_multicharacter_system_plan.md  docs_onhit_and_damage.md  docs_properties_system.md  docs_repository_structure.md  docs_resource_auto_download.md  docs_respawn_control_system.md  docs_running_a_server.md  docs_server_configuration_reference.md  docs_server_data_directory.md  docs_server_ports_usage.md  docs_server_update_playbook.md  docs_serverside_scripting_reference.md  docs_skyrim_platform.md  docs_voice_api.md  docs_zone_handover_roadmap.md
docs/contributing/en/: How to release SP update.md  How to work with skymp5-client.md
docs/contributing/ru/: Как выпустить обновление SP.md  Как работать с skymp5-client.md
docs/release/: server_operator_announcement_template.md  sp-2.3.md  sp-2.8.md  sp-2.9.md
docs/release/dev/: sp-magic-api.md
docs/skyrim_platform/: events.md  ini_settings.md
misc/: gather_prs_locally.cmake
misc/systemd/: skymp-supervisorctl.sh  skymp.service
misc/tests/: test_crash.js  test_dlc1chauruscocoonscript_stack_overflow.js  test_factions.js  test_findclosestreferenceoftypefromref.js  test_isdead.js  test_onPapyrusEvent_OnItemAdded.js  test_onactivate.js  test_partial_location_save.js  test_registerforsingleupdate.js  test_removeallitems.js  test_spawnpoint_of_placed_actors.js
misc/tests/test_partial_location_save/: dc558_Skyrim.esm.json
misc/update/: update_server.ps1  update_server.sh
overlay_ports/cef-prebuilt/: portfile.cmake
overlay_ports/commonlibae/: vcpkg.json
overlay_ports/ga-sdk-cpp/: vcpkg.json
overlay_ports/libxml2/: vcpkg.json
overlay_ports/node-embedder-api/: vcpkg.json
overlay_ports/node-embedder-api-prebuilt/: vcpkg.json
overlay_ports/rsm-bsa/: vcpkg.json
overlay_ports/zf-log/: vcpkg.json
skymp5-client/: CMakeLists.txt  package-lock.json  package.json  tsconfig.json  webpack.config.js
skymp5-client/src/: index.ts  logging.ts  version.ts
skymp5-client/src/extensions/: objectReferenceEx.ts
skymp5-client/src/features/: authModel.ts
skymp5-client/src/services/: spApiInteractor.ts
skymp5-client/src/sync/: actorvalues.ts  animation.ts  appearance.ts  equipment.ts  inventory.ts  movement.ts  movementApply.ts  movementGet.ts  voiceActivitySync.ts
skymp5-client/src/view/: formView.ts  formViewArray.ts  hostAttempts.ts  model.ts  modelApplyUtils.ts  playerCharacterDataHolder.ts  spawnProcess.ts  worldView.ts  worldViewMisc.ts
skymp5-client/tests/: voiceActivitySyncPacket.test.ts
skymp5-front/: .gitignore  README.md  config.example.js  config.ts  download-and-build-with-prs.cmake  package-lock.json  package.json  tsconfig.json  webpack.config.ts
skymp5-front/.storybook/: main.js
skymp5-front/scripts/: benchmark-websocket.js  test-api-integration.js  test-e2e-smoke.js  test-locales.js  test-unit.js
skymp5-front/src/: App.js  constructor.js  globals.d.ts  i18n.ts  index.js
skymp5-front/src/hooks/: useAdminWebSocket.ts
skymp5-front/src/interfaces/: buttons.ts
skymp5-front/src/locales/: de.json  en.json  (+4 more)
skymp5-functions-lib/: CMakeLists.txt  download-and-build-with-prs.cmake  local-gamemode.js
skymp5-scripts/: MedicalDownedMode.psc
skymp5-server/: CMakeLists.txt  package-lock.json  package.json  tsconfig.json
skymp5-server/cpp/addon/: ScampServer.cpp
skymp5-server/cpp/addon/property_bindings/: ActorValuesBinding.cpp  ActorValuesBinding.h  CanRespawnBinding.cpp  CanRespawnBinding.h  PropertyBindingFactory.cpp
skymp5-server/cpp/messages/: UpdateMovementMessage.h
skymp5-server/cpp/server_guest_lib/: ActionListener.cpp  AppearanceValidation.cpp  AppearanceValidation.h  CraftService.cpp  MpActor.cpp  MpActor.h  MpChangeForms.h  MpObjectReference.cpp  ScriptVariablesHolder.cpp  WorldState.cpp  WorldState.h
skymp5-server/cpp/server_guest_lib/condition_functions/: GetActorValuePercent.cpp
skymp5-server/cpp/server_guest_lib/gamemode_events/: DeathEvent.cpp  ItemPickupAttemptEvent.cpp  ItemPickupAttemptEvent.h
skymp5-server/cpp/server_guest_lib/script_classes/: PapyrusActor.cpp
skymp5-server/ts/: CMakeLists.txt  adminWebSocket.ts  index.ts  manifestGen.ts  pluginDiscoveryState.ts  scampNative.ts  settings.ts  ui.ts  voiceActivityApi.ts  voiceActivityManager.ts
skymp5-server/ts/adapters/: YacaTeamSpeakAdapter.ts
skymp5-server/ts/examples/: healer-revival-system.ts
skymp5-server/ts/lib/: axiosDefaults.ts
skymp5-server/ts/shims/: opentelemetry-api.js
skymp5-server/ts/systems/: discordBanSystem.ts  effectsLearningSystem.ts  enchantmentsSystem.ts  favoritesSystem.ts  login.ts  markerSystem.ts  masterApiBalanceSystem.ts  masterClient.ts  metricsSystem.ts  movementDebugLogSystem.ts  spawn.ts  timeSystem.ts  weatherSystem.ts
skyrim-platform/: README.md
unit/: AppearanceValidationTest.cpp  DistContentsExpected.json  PapyrusActorTest.cpp
(+149 files in other folders)
